--- a/main.html
+++ b/main.html
@@ -1,40 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<title>Accordian</title>
-	<link rel="stylesheet" type="text/css" href="test.css">
+	<link rel="stylesheet" type="text/css" href="main.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
 </head>
+
 <body>
-<div class="container">
-	<ul class="accordian">
-	<li>
-		<a href="#first" class="accordian-header">Section One</a>
-		<div class="accordian-content" id="first">
-			<p class="center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatem, eum sit doloremque tenetur itaque magni harum facere ipsum vero, eveniet unde quos officiis, dolorem repellendus recusandae consectetur. Quisquam, eos?</p>
+	<div class="container">
+		<ul class="accordian">
+			<li>
+				<a href="#first" class="accordian-header title1">Section One</a>
+				<div class="accordian-content content1" id="first">
+					<p class="center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatem, eum sit doloremque tenetur itaque magni harum facere ipsum vero, eveniet unde quos officiis, dolorem repellendus recusandae consectetur. Quisquam, eos?</p>
+				</div>
+			</li>
 
-			</div>
-		</li>	
+			<li>
+				<a href="#second" class="accordian-header title2">Section Two</a>
+				<div class="accordian-content content2" id="second">
+					<p class="center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatem, eum sit doloremque tenetur itaque magni harum facere ipsum vero, eveniet unde quos officiis, dolorem repellendus recusandae consectetur. Quisquam, eos?</p>
+				</div>
+			</li>
 
-		<li>
-		<a href="#second" class="accordian-header">Section Two</a>
-		<div class="accordian-content" id="second">
-			<p class="center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatem, eum sit doloremque tenetur itaque magni harum facere ipsum vero, eveniet unde quos officiis, dolorem repellendus recusandae consectetur. Quisquam, eos?</p>
-			</div>
-		</li>
-
-
-		<li>
-		<a href="#third" class="accordian-header">Section Three</a>
-		<div class="accordian-content" id="third">
-			<p class="center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatem, eum sit doloremque tenetur itaque magni harum facere ipsum vero, eveniet unde quos officiis, dolorem repellendus recusandae consectetur. Quisquam, eos?</p>
-			</div>
-		</li>
-
-
-
-	</ul>
-</div>
-	
+			<li>
+				<a href="#third" class="accordian-header title3">Section Three</a>
+				<div class="accordian-content content3" id="third">
+					<p class="center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima voluptatem, eum sit doloremque tenetur itaque magni harum facere ipsum vero, eveniet unde quos officiis, dolorem repellendus recusandae consectetur. Quisquam, eos?</p>
+				</div>
+			</li>
+		</ul>
+	</div>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="main.js" charset="utf-8"></script>
 </body>
+
 </html>
